# plover-q-and-a

./: .coverage  .gitignore  .pylintrc  INSTRUCTIONS.md  README.md  setup.cfg
.github/workflows/: ci.yml  release.yml  setup.yml
examples/: README.md  q_and_a.json
examples/config/: tasmanian_style.json
examples/dictionaries/: immediate-responses.json  lawyers.json  other-speakers-ncra-style.json  other-speakers.json  q-and-a.json
plover_q_and_a/: __init__.py  arguments.py  extension.py
plover_q_and_a/config/: __init__.py  actions.py  defaults.py  extractor.py  file.py  load.py  loader.py  parser.py  reload.py
plover_q_and_a/config/parser/: __init__.py  actions.py  answer.py  byline.py  parse.py  question.py  sentence_ending.py  set_name.py  speaker.py
plover_q_and_a/meta/: __init__.py  answer.py  arguments.py  byline.py  follow_on.py  question.py  speaker.py
plover_q_and_a/sign/: __init__.py  answer.py  arguments.py  byline.py  follow_on.py  question.py  speaker.py  text.py
plover_q_and_a/speaker/: __init__.py  arguments.py  formatting.py  set_name.py
src/plover_q_and_a/: __init__.py  extension.py
test/: justfile
test/config/: conftest.py  lower_case_with_no_upcase_formatting.json  lower_case_with_upcase_formatting.json  lower_case_without_upcase_formatting.json  test_config.py  test_load.py  test_reload.py
test/meta/: test_answer.py  test_byline.py  test_follow_on.py  test_meta.py  test_question.py  test_speaker.py
test/sign/: conftest.py  test_answer.py  test_byline.py  test_follow_on.py  test_question.py  test_sign.py  test_speaker.py
(+35 files in other folders)
