[metadata]
author = Paul Fioravanti
author_email = paul@paulfioravanti.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
description = Legal Q&A (Question and Answer) formatting output for Plover.
keywords = plover plover_plugin
license = GNU General Public License v3 or later (GPLv3+)
long_description = file: README.md
long_description_content_type = text/markdown
name = plover_q_and_a
url = https://github.com/paulfioravanti/plover-q-and-a
version = 0.2.0

[options]
install_requires =
    plover>=4.0.0.dev12
setup_requires =
    setuptools>=30.3.0
zip_safe = True
packages =
    plover_q_and_a
    plover_q_and_a.config
    plover_q_and_a.sign
    plover_q_and_a.speaker

[options.entry_points]
plover.extension =
    plover_q_and_a = plover_q_and_a.extension:QAndA

[tool:pytest]
pythonpath = plover_q_and_a
